# django-secured-fields

./: .gitignore  .isort.cfg  .pylintrc  .style.yapf  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml  ci.yml  codeql-analysis.yml  publish.yaml  test.yml
.github/workflows/shared/: test.yml
secured_fields/: __init__.py  apps.py  enum.py  exceptions.py  fernet.py  fields.py  lookups.py  mixins.py  storage.py  utils.py
secured_fields/fields/: __init__.py  files.py
secured_fields/management/commands/: generate_key.py
test_secured_fields/: .coveragerc  docker-compose.yml  manage.py
test_secured_fields/config/: settings.py  urls.py
test_secured_fields/main/: apps.py  models.py  settings.py
test_secured_fields/main/tests/: test_fernet.py  test_fields.py  test_lookups.py  test_simple.py  utils.py
